Added using TinyColor

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Used TinyColor from https://github.com/bgrins/TinyColor -->
+	<script type="text/javascript" src="tinycolor.js"></script>
 	<script type="text/javascript" src="rainbowText.js"></script>
 	<script type="text/javascript" src="index.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
